@@ -112,6 +112,11 @@
 #
 #MIN_WORK_TIME			300
 
+# During outbound SMTP delivery retry MX entries that show mail queue
+# movement.  Default is ON.
+#
+#AGGRESSIVE_DELIVERY		[ ON | OFF ]
+
 # Call a content filter to examine the DATA portion of an incoming SMTP
 # message.  The content of the message is given on stdin, and the following
 # environment variables are defined:
